create text change function

--- a/index.html
+++ b/index.html
@@ -49,28 +49,26 @@
       </div>
     </section>
 
-    <section id="about-team">
-      <section id="imageSec">
-        <div id="imageContainer">
-          <div id="memberImages" style="right: 0"> <!-- add in all of the images to make a scrolling "banner" -->
-            <img class="image desinger" src="images/member_0.png"/>
-            <img class="image developer" src="images/member_1.png"/>
-            <img class="image drinker" src="images/member_2.png"/>
-          </div>
+    <section id="imageSec">
+      <div id="imageContainer">
+        <div id="memberImages" style="right: 0"> <!-- add in all of the images to make a scrolling "banner" -->
+          <img class="image designer" src="images/designer.png"/>
+          <img class="image developer" src="images/developer.png"/>
+          <img class="image drinker" src="images/snuggle bear.png"/>
         </div>
+      </div>
 
-        <div id="button">
-          <button id="button-previous" type="button" name="button">&nbsp;<&nbsp;</button>
-          <button id="button-next" type="button" name="button">&nbsp;>&nbsp;</button>
-        </div>
-      </section>
+      <div id="button">
+        <button id="button-previous" type="button" name="button">&nbsp;<&nbsp;</button>
+        <button id="button-next" type="button" name="button">&nbsp;>&nbsp;</button>
+      </div>
+    </section>
 
-      <section id="infoSec">
-        <div id="member">
-          <h1 id="member-title">Designer</h1>
-          <p class="member-info"></p>
-        </div>
-      </section>
+    <section id="infoSec">
+      <div id="member">
+        <h1 id="member-title">Designer - Joanna</h1>
+        <p class="member-info">Joanna is a student studying Interactive Media Design at Fanshawe College. Her works focus on self-care, wellness, and dogs.</p>
+      </div>
     </section>
 
   </main>
